tests/paczka1/small_fuzzy/67065652.err
Error in line 6: S787 S553 71,2
Error in line 10: 4EXpNvTyVJ S144 97,9
Error in line 7: S787 S787 29,7
